--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,5 +20,11 @@
 </ion-header>
 
 <ion-content padding>
-  <div id="map" class="map"></div>
+  <div id="map" class="map">
+    <div id="popup" class="ol-popup">
+      <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+      <div id="popup-content"></div>
+    </div>
+  </div>
+  
 </ion-content>
